// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@sendEmail getEmailMailOptions should return the confirmEmail html template and email subject 1`] = `
Object {
  "html": "<html lang=\\"en\\">
<head>
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <title>Confirm Email Template</title>
    <style type=\\"text/css\\">
        body {
            font-family: Helvetica;
            background-color: #EFEFEF;
        }

        table.main {
            margin: 40px auto;
            border-color: #EEEEEE;
            background-color: #FFFFFF;
        }
    </style>
</head>
<body>
    <table cellpadding=\\"0\\" cellspacing=\\"0\\" border=\\"1\\" class=\\"main\\">
        <tr>
            <td>
                <table cellpadding=\\"40\\" cellspacing=\\"0\\" border=\\"0\\" align=\\"center\\">
                    <tr>
                        <td width=\\"500\\" valign=\\"top\\">
                            <h1>Progress Tracker</h1>                            <h3>Confirm your email address</h3>
                            <p>
                                Click on the link below to confirm your email address.
                            </p>
                            <a href=\\"confirm/{{token}}\\">Confirm my email address</a>
                        </td>
                    </tr>
                </table>
            </td>
        </tr>
    </table>
</body>
</html>",
  "subject": "Progress tracker confirm email address.",
}
`;

exports[`@sendEmail getEmailMailOptions should return the resetPassword html template and email subject 1`] = `
Object {
  "html": "<html lang=\\"en\\">
<head>
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <title>Confirm Email Template</title>
    <style type=\\"text/css\\">
        body {
            font-family: Helvetica;
            background-color: #EFEFEF;
        }

        table.main {
            margin: 40px auto;
            border-color: #EEEEEE;
            background-color: #FFFFFF;
        }
    </style>
</head>
<body>
    <table cellpadding=\\"0\\" cellspacing=\\"0\\" border=\\"1\\" class=\\"main\\">
        <tr>
            <td>
                <table cellpadding=\\"40\\" cellspacing=\\"0\\" border=\\"0\\" align=\\"center\\">
                    <tr>
                        <td width=\\"500\\" valign=\\"top\\">
                            <h1>Progress Tracker</h1>
                            <h3>Password reset request</h3>
                            <p>
                                Click on the link below to reset your password.
                            </p>
                            <a href=\\"reset/{{token}}\\">Reset my password.</a>
                        </td>
                    </tr>
                </table>
            </td>
        </tr>
    </table>
</body>
</html>",
  "subject": "Progress tracker password reset request.",
}
`;
